Fix: use Collectors.toList() for Java 11 compatibility